<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/title_layout"
        layout="@layout/top_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@null"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/black_text_color"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/property_question2_1"
        android:textColor="@color/black_text_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/property_question2_2"
        android:textColor="@color/grayred_text_color"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/property_question3_0"
        android:textColor="@color/black_text_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="12dp"
        android:drawableStart="@drawable/text_point"
        android:drawableLeft="@drawable/text_point"
        android:drawablePadding="8dp"
        android:text="@string/property_question3_1"
        android:textColor="@color/grayred_text_color"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="12dp"
        android:drawableStart="@drawable/text_point"
        android:drawableLeft="@drawable/text_point"
        android:drawablePadding="8dp"
        android:text="@string/property_question3_2"
        android:textColor="@color/grayred_text_color"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="12dp"
        android:drawableStart="@drawable/text_point"
        android:drawableLeft="@drawable/text_point"
        android:drawablePadding="8dp"
        android:text="@string/property_question3_3"
        android:textColor="@color/grayred_text_color"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="12dp"
        android:drawableStart="@drawable/text_point"
        android:drawableLeft="@drawable/text_point"
        android:drawablePadding="8dp"
        android:text="@string/property_question3_4"
        android:textColor="@color/grayred_text_color"
        android:textSize="14sp" />


</LinearLayout>
