<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_name_auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bg_color"
    tools:context="com.myproperty.activity.NameAuthActivity">

    <include
        android:id="@+id/top_title"
        layout="@layout/top_view" />

    <ScrollView
        android:id="@+id/sl_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_title"
        android:scrollbars="none"
        android:background="@drawable/bg_default">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/bg_color"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color"/>
            <RelativeLayout
                android:id="@+id/rl_nameauth_familyname"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bg_default"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/property_surname"
                    android:textColor="@color/black_text_color"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/et_nameauth_familyname"
                    android:layout_width="60dp"
                    android:gravity="center_vertical|right"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp"
                    android:background="@null"
                    android:textSize="14dp"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="@color/edit_text_color"
                    android:hint="@string/property_input_surname" />
            </RelativeLayout>
            <View
                android:id="@+id/linea"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color"
                android:layout_marginLeft="15dp"/>
            <RelativeLayout
                android:id="@+id/rl_nameauth_name"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bg_default"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/property_name"
                    android:textColor="@color/black_text_color"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/et_nameauth_name"
                    android:layout_width="75dp"
                    android:gravity="center_vertical|right"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp"
                    android:background="@null"
                    android:textSize="14dp"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="@color/edit_text_color"
                    android:hint="@string/property_input_name" />
            </RelativeLayout>

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color"
                android:layout_marginLeft="15dp"/>
            <RelativeLayout
                android:id="@+id/rl_nameauth_phone"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bg_default"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/property_phone"
                    android:textColor="@color/black_text_color"
                    android:textSize="16dp"
                    android:id="@+id/textView21" />

                <EditText
                    android:id="@+id/et_nameauth_phone"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="11dp"
                    android:background="@null"
                    android:textSize="14dp"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="@color/edit_text_color"
                    android:hint="@string/property_input_phone"
                    android:layout_alignTop="@+id/textView21"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="11dp" />
            </RelativeLayout>

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color"
                android:layout_marginLeft="15dp"/>
            <RelativeLayout
                android:id="@+id/rl_nameauth_idcard"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bg_default"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/property_idcard"
                    android:textColor="@color/black_text_color"
                    android:textSize="16dp"
                    android:id="@+id/textView22" />

                <EditText
                    android:id="@+id/et_nameauth_idcard"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="13dp"
                    android:background="@null"
                    android:textSize="14dp"
                    android:digits="@string/filter_vcode"
                    android:maxLength="18"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="@color/edit_text_color"
                    android:hint="@string/property_input_idcard"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <View
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color"
                android:layout_marginLeft="15dp"/>

            <RelativeLayout
                android:id="@+id/rl_nameauth_idphoto"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/bg_default">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/property_idcard_front"
                    android:textColor="@color/black_text_color"
                    android:textSize="16dp" />
                <ImageView
                    android:id="@+id/iv_nameauth_idfront"
                    android:layout_width="139dp"
                    android:layout_height="92dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginLeft="31dp"
                    android:src="@drawable/kuang3x"/>
                <ImageView
                    android:id="@+id/iv_nameauth_idfront2"
                    android:layout_width="139dp"
                    android:layout_height="92dp"
                    android:padding="3dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="35dp"
                    android:layout_marginLeft="31dp"
                    android:src="@drawable/sfz3x"/>
                <ImageView
                    android:id="@+id/iv_nameauth_idfront3"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginLeft="80dp"
                    android:src="@drawable/ps3x" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_id_frontpic"
                    android:textSize="10dp"
                    android:layout_marginTop="105dp"
                    android:layout_marginLeft="70dp"
                    android:textColor="@color/black_text_color"/>
                <ImageView
                    android:id="@+id/iv_nameauth_idback"
                    android:layout_width="139dp"
                    android:layout_height="92dp"
                    android:layout_marginTop="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="31dp"
                    android:src="@drawable/kuang3x"/>
                <ImageView
                    android:id="@+id/iv_nameauth_idback2"
                    android:layout_width="139dp"
                    android:layout_height="92dp"
                    android:padding="3dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="31dp"
                    android:src="@drawable/sfzback3x2"/>
                <ImageView
                    android:id="@+id/iv_nameauth_idback3"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="70dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="80dp"
                    android:src="@drawable/ps3x" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_id_backpic"
                    android:textSize="10dp"
                    android:layout_marginTop="105dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="70dp"
                    android:textColor="@color/black_text_color"/>

            </RelativeLayout>
            <View
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color"
                android:layout_marginLeft="15dp"/>
            <RelativeLayout
                android:id="@+id/rl_nameauth_propertyphoto"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/bg_default">
                <TextView
                    android:id="@+id/tv_fcz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/property_picture"
                    android:textColor="@color/black_text_color"
                    android:textSize="16dp" />
                <ImageView
                    android:id="@+id/iv_nameauth_propertyfront"
                    android:layout_width="130dp"
                    android:layout_height="160dp"
                    android:layout_below="@id/tv_fcz"
                    android:scaleType="fitXY"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="39dp"
                    android:src="@drawable/shukuang3x"/>
                <ImageView
                    android:id="@+id/iv_nameauth_propertyfront2"
                    android:layout_width="130dp"
                    android:layout_height="160dp"
                    android:paddingLeft="14dp"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp"
                    android:scaleType="fitXY"
                    android:layout_below="@id/tv_fcz"
                    android:layout_marginLeft="32dp"
                    android:src="@drawable/fczsyrz3x"/>
                <ImageView
                    android:id="@+id/iv_nameauth_propertyfront3"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginLeft="90dp"
                    android:src="@drawable/ps3x" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_owner"
                    android:textSize="10sp"
                    android:layout_marginTop="115dp"
                    android:layout_marginLeft="70dp"
                    android:textColor="@color/black_text_color"/>
                <ImageView
                    android:id="@+id/iv_nameauth_propertyback"
                    android:layout_width="130dp"
                    android:layout_height="160dp"
                    android:scaleType="fitXY"
                    android:layout_below="@id/tv_fcz"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="39dp"
                    android:src="@drawable/shukuang3x"/>
                <ImageView
                    android:id="@+id/iv_nameauth_propertyback2"
                    android:layout_width="130dp"
                    android:layout_height="160dp"
                    android:padding="3dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/fczfjy3x"
                    android:layout_below="@id/tv_fcz"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="39dp"/>

                <ImageView
                    android:id="@+id/iv_nameauth_propertyback3"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="70dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="80dp"
                    android:src="@drawable/ps3x" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_page"
                    android:textSize="10sp"
                    android:layout_marginTop="115dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="65dp"
                    android:textColor="@color/black_text_color"/>


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_protect"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/edit_text_color"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <View
                android:id="@+id/line6"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:background="@color/bg_color">
                <Button
                    android:id="@+id/btn_nameauth_commit"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="44dp"
                    android:layout_centerVertical="true"
                    android:text="@string/property_sumit"
                    android:background="@drawable/rect_round_blue"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    
</RelativeLayout>
