<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_property"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f2f5f7"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <include
            android:id="@+id/title_layout"
            layout="@layout/top_view" />

        <!--房产列表-->
        <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
            android:id="@+id/address_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_addproperty"
            android:layout_below="@id/title_layout"
            android:background="@null" />

        <RelativeLayout
            android:id="@+id/rl_auth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_addproperty"
            android:layout_below="@id/title_layout"
            android:background="@null"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_check3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/property_check3"
                android:textColor="@color/grayred_text_color"
                android:textSize="14sp" />

            <!--房产认证列表-->
            <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
                android:id="@+id/address_auth_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv_check3"
                android:background="@null" />

            <TextView
                android:id="@+id/tv_check_property"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:text="@string/property_cant3"
                android:textColor="@color/color_d95050"
                android:textSize="14sp"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_addproperty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_text_property_select"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_no_auth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:src="@drawable/icon_close"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/img_no_auth"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_no_auth"
                    android:textColor="@color/grayred_text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_property"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/select_text_property"
                    android:paddingBottom="2dp"
                    android:text="@string/property_property"
                    android:textColor="@color/color_8eafea"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_o"
                    android:textColor="@color/grayred_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/property_done_auth"
                android:textColor="@color/grayred_text_color"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
